fix; layout problem first row corrected

--- a/src/style/media.css
+++ b/src/style/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1430px) {
   #nav-text {
     display: none;
   }
@@ -19,10 +19,14 @@
   }
   #header-title {
     font-size: 36px;
-    width: 200%;
+    width: 110%;
   }
   #header-smalltext {
     font-size: 16px;
+    width: 120%;
+    margin-left: 7%;
+    margin-right: 8%;
+    line-height: 150%;
   }
   /* #van-gogh {
         height: 100%;
@@ -41,18 +45,20 @@
   }
   #header-text {
     flex-direction: column;
-    margin-left: 5%;
+    margin-left: 8%;
+    margin-right: 8%;
   }
   #header-title {
     font-size: 36px;
-    width: 90%;
-    margin-left: 4%;
+    width: 110%;
     margin-top: 3%;
+    margin-left: 0;
     margin-bottom: 3%;
   }
   #header-smalltext {
     font-size: 16px;
-    width: 90%;
+    width: 100%;
+    margin-left: 0;
   }
   #van-gogh {
     background-image: image-set(
